RES-109: implement atomic Pose subject switching
